--- a/helm/xray-values.yaml
+++ b/helm/xray-values.yaml
@@ -22,24 +22,13 @@ common:
         - '-c'
         - >
           mkdir -p {{ .Values.xray.persistence.mountPath }}/etc/fluentd/;
-          curl https://raw.githubusercontent.com/jfrog/log-analytics-splunk/Metrics_values_sed/fluent.conf.xray -o {{ .Values.xray.persistence.mountPath }}/etc/fluentd/fluentd.conf;
-          cp {{ .Values.xray.persistence.mountPath }}/etc/fluentd/fluentd.conf  {{ .Values.xray.persistence.mountPath }}/etc/fluentd/fluent.tmp.conf;
-          sed -i -e 's/HEC_HOST/{{ .Values.splunk.host }}/g' {{ .Values.xray.persistence.mountPath }}/etc/fluentd/fluent.tmp.conf;
-          sed -i -e 's/HEC_PORT/{{ .Values.splunk.port }}/g' {{ .Values.xray.persistence.mountPath }}/etc/fluentd/fluent.tmp.conf;
-          sed -i -e 's/METRICS_HEC_TOKEN/{{ .Values.splunk.metrics_token }}/' {{ .Values.xray.persistence.mountPath }}/etc/fluentd/fluent.tmp.conf;
-          sed -i -e 's/HEC_TOKEN/{{ .Values.splunk.token }}/' {{ .Values.xray.persistence.mountPath }}/etc/fluentd/fluent.tmp.conf;
-          sed -i -e 's/COM_PROTOCOL/{{ .Values.splunk.com_protocol }}/g' {{ .Values.xray.persistence.mountPath }}/etc/fluentd/fluent.tmp.conf;
-          sed -i -e 's/INSECURE_SSL/{{ .Values.splunk.insecure_ssl }}/g' {{ .Values.xray.persistence.mountPath }}/etc/fluentd/fluent.tmp.conf;
-          sed -i -e 's|JPD_URL|{{ .Values.jfrog.observability.jpd_url }}|g' {{ .Values.xray.persistence.mountPath }}/etc/fluentd/fluent.tmp.conf;
-          sed -i -e 's/ADMIN_USERNAME/{{ .Values.jfrog.observability.username }}/' {{ .Values.xray.persistence.mountPath }}/etc/fluentd/fluent.tmp.conf;
-          sed -i -e 's/JFROG_API_KEY/{{ .Values.jfrog.observability.apikey }}/' {{ .Values.xray.persistence.mountPath }}/etc/fluentd/fluent.tmp.conf;
-          mv {{ .Values.xray.persistence.mountPath }}/etc/fluentd/fluent.tmp.conf {{ .Values.xray.persistence.mountPath }}/etc/fluentd/fluentd.conf;
+          curl https://raw.githubusercontent.com/jfrog/log-analytics-splunk/PTRENG-4760-Updating-documentation/fluent.conf.xray -o {{ .Values.xray.persistence.mountPath }}/etc/fluentd/fluentd.conf;
       volumeMounts:
         - mountPath: "{{ .Values.xray.persistence.mountPath }}"
           name: data-volume
   customSidecarContainers: |
     - name: "xray-platform-fluentd-sidecar"
-      image: "partnership-public-images.jfrog.io/fluentd/fluentd:1.16.0"
+      image: "partnership-public-images.jfrog.io/fluentd/fluentd:1.23.0"
       imagePullPolicy: "IfNotPresent"
       volumeMounts:
         - mountPath: "{{ .Values.xray.persistence.mountPath }}"
@@ -49,16 +38,36 @@ common:
           value: {{ .Values.xray.persistence.mountPath }}
         - name: FLUENTD_CONF
           value: ../../../../{{ .Values.xray.persistence.mountPath }}/etc/fluentd/fluentd.conf
+        - name: JPD_URL
+          value: {{ .Values.jfrog.observability.jpd_url }}
+        - name: JPD_ADMIN_USERNAME
+          value: {{ .Values.jfrog.observability.username }}
+        - name: JFROG_ADMIN_TOKEN
+          value: {{ .Values.jfrog.observability.access_token }}
+        - name: COMMON_JPD
+          value: {{ .Values.jfrog.observability.common_jpd | quote }}
+        - name: SPLUNK_COM_PROTOCOL
+          value: {{ .Values.splunk.com_protocol }}
+        - name: SPLUNK_HEC_HOST
+          value: {{ .Values.splunk.host }}
+        - name: SPLUNK_HEC_PORT
+          value: {{ .Values.splunk.port | quote}}
+        - name: SPLUNK_METRICS_HEC_TOKEN
+          value: {{ .Values.splunk.metrics_token }}
+        - name: SPLUNK_HEC_TOKEN
+          value: {{ .Values.splunk.logs_token }}
+        - name: SPLUNK_INSECURE_SSL
+          value: {{ .Values.splunk.insecure_ssl | quote}}
 splunk:
-  host: splunk.example.com
-  port: 8088
-  token: splunk_hec_token
-  metrics_token: splunk_metrics_hec_token
-  index: jfrog_splunk
-  com_protocol: https
-  insecure_ssl: false
+  host: SPLUNK_HEC_HOST
+  port: SPLUNK_HEC_PORT
+  logs_token: SPLUNK_HEC_TOKEN
+  metrics_token: SPLUNK_METRICS_HEC_TOKEN
+  com_protocol: SPLUNK_COM_PROTOCOL
+  insecure_ssl: SPLUNK_INSECURE_SSL
 jfrog:
   observability:
-    jpd_url: jpd_url
-    username: jfrog_user
-    apikey: jfrog_api_key
+    jpd_url: JPD_URL
+    username: JPD_ADMIN_USERNAME
+    access_token: JFROG_ADMIN_TOKEN
+    common_jpd: COMMON_JPD
