Adding new version of app, fixing eventtypes index name

--- a/app/jfrog-logs/default/eventtypes.conf
+++ b/app/jfrog-logs/default/eventtypes.conf
@@ -1,11 +1,11 @@
 [access_audit_eventtype]
-search = index="jfrog_splunk" log_source="jfrog.rt.access.audit"
+search = `default_index` log_source="jfrog.rt.access.audit"
 
 [artifactory_request_eventtype]
-search = index="jfrog_splunk" log_source="jfrog.rt.artifactory.request"
+search = `default_index` log_source="jfrog.rt.artifactory.request"
 
 [router_request_eventtype]
-search = index="jfrog_splunk" log_source="jfrog.rt.router.request"
+search = `default_index` log_source="jfrog.rt.router.request"
 
 [vulnerability_eventtype]
-search = index="xray_violations"
+search = `default_index`
