--- a/app/jfrog-logs/default/app.conf
+++ b/app/jfrog-logs/default/app.conf
@@ -6,8 +6,8 @@ state_change_requires_restart = true
 
 [launcher]
 author = JFrog
-version = 1.2.5
-description = This app helps process extracted logs for the JFrog Platform, the universal, hybrid end-to-end DevOps platform.  The app includes a diagnostic dashboard view for JFrog Artifactory. For more information see our blog:  https://jfrog.com/blog/unified-jfrog-log-analytics-with-splunk/
+version = 1.2.6
+description = This app helps process extracted logs and metrics for the JFrog Platform, the universal, hybrid end-to-end DevOps platform.  The app includes a diagnostic dashboard view for JFrog Artifactory. For more information see our blog:  https://jfrog.com/blog/unified-jfrog-log-analytics-with-splunk/
 
 [ui]
 label = JFrog Platform Log Analytics, Violations and Metrics
