--- a/helm/xray-values.yaml
+++ b/helm/xray-values.yaml
@@ -19,7 +19,7 @@ common:
           name: data-volume
   customSidecarContainers: |
     - name: "xray-platform-fluentd-sidecar"
-      image: "releases-pts-observability-fluentd.jfrog.io/fluentd:4.5"
+      image: "releases-pts-observability-fluentd.jfrog.io/fluentd:4.9"
       imagePullPolicy: "IfNotPresent"
       volumeMounts:
         - mountPath: "{{ .Values.xray.persistence.mountPath }}"
@@ -52,6 +52,10 @@ common:
           value: {{ .Values.splunk.logs_token }}
         - name: SPLUNK_INSECURE_SSL
           value: {{ .Values.splunk.insecure_ssl | quote}}
+        - name: SPLUNK_VERIFY_SSL
+          value: {{ .Values.splunk.verify_ssl | quote}}  
+        - name: SPLUNK_COMPRESS_DATA
+          value: {{ .Values.splunk.compress_data | quote }}
 splunk:
   host: SPLUNK_HEC_HOST
   port: SPLUNK_HEC_PORT
@@ -59,6 +63,8 @@ splunk:
   metrics_token: SPLUNK_METRICS_HEC_TOKEN
   com_protocol: SPLUNK_COM_PROTOCOL
   insecure_ssl: SPLUNK_INSECURE_SSL
+  verify_ssl: SPLUNK_VERIFY_SSL
+  compress_data: SPLUNK_COMPRESS_DATA
 jfrog:
   observability:
     jpd_url: JPD_URL
