--- a/docker-build/docker.env
+++ b/docker-build/docker.env
@@ -5,12 +5,9 @@ SPLUNK_HEC_PORT=8088
 SPLUNK_HEC_TOKEN=change_me
 SPLUNK_METRICS_HEC_TOKEN=change_me
 SPLUNK_INSECURE_SSL=change_me
+SPLUNK_VERIFY_SSL=change_me
+SPLUNK_COMPRESS_DATA=change_me
 JPD_URL=https://change_me.jfrog.io
 JPD_ADMIN_USERNAME=admin
 JFROG_ADMIN_TOKEN=change_me
 COMMON_JPD=false
-
-
-
-
-
