--- a/helm/jfrog_helm.env
+++ b/helm/jfrog_helm.env
@@ -4,6 +4,8 @@ export SPLUNK_HEC_PORT=8088
 export SPLUNK_HEC_TOKEN=SPLUNK_HEC_TOKEN
 export SPLUNK_METRICS_HEC_TOKEN=SPLUNK_METRICS_HEC_TOKEN
 export SPLUNK_INSECURE_SSL=false
+export SPLUNK_VERIFY_SSL=true
+export SPLUNK_COMPRESS_DATA=true
 export JPD_URL=http://abc.jfrog.io
 export JPD_ADMIN_USERNAME=admin
 export COMMON_JPD=false
