--- a/jfrog.env
+++ b/jfrog.env
@@ -5,6 +5,8 @@ export SPLUNK_HEC_PORT=8088
 export SPLUNK_HEC_TOKEN=SPLUNK_HEC_TOKEN
 export SPLUNK_METRICS_HEC_TOKEN=SPLUNK_METRICS_HEC_TOKEN
 export SPLUNK_INSECURE_SSL=false
+export SPLUNK_VERIFY_SSL=true
+export SPLUNK_COMPRESS_DATA=true
 export JPD_URL=http://abc.jfrog.io
 export JPD_ADMIN_USERNAME=admin
 export JFROG_ADMIN_TOKEN=JFROG_ADMIN_TOKEN
