JOBS-760 - Fix ha-values yaml and upgrade params

--- a/helm/artifactory-ha-values.yaml
+++ b/helm/artifactory-ha-values.yaml
@@ -5,7 +5,7 @@ artifactory:
     enabled: true
   customInitContainersBegin: |
     - name: "prepare-fluentd-conf-on-persistent-volume"
-      image: {{ include "artifactory.getImageInfoByValue" (list . "initContainers") }}
+      image: {{ include "artifactory-ha.getImageInfoByValue" (list . "initContainers") }}
       imagePullPolicy: "{{ .Values.artifactory.image.pullPolicy }}"
       command:
         - 'sh'
