--- a/helm/jfrog_helm.env
+++ b/helm/jfrog_helm.env
@@ -9,3 +9,4 @@ export SPLUNK_COMPRESS_DATA=true
 export JPD_URL=http://abc.jfrog.io
 export JPD_ADMIN_USERNAME=admin
 export COMMON_JPD=false
+export LOG_ENV=staging
