--- a/jfrog.env
+++ b/jfrog.env
@@ -11,3 +11,4 @@ export JPD_URL=http://abc.jfrog.io
 export JPD_ADMIN_USERNAME=admin
 export JFROG_ADMIN_TOKEN=JFROG_ADMIN_TOKEN
 export COMMON_JPD=false
+export LOG_ENV=production
