Revert "Fix JFrog metrics authentication configuration"
This reverts commit 1e2c05ecc2b4cc9d3d30b465646f4da849476799.

--- a/helm/jfrog_helm.env
+++ b/helm/jfrog_helm.env
@@ -1,16 +1,12 @@
-export SPLUNK_COM_PROTOCOL=https
-export SPLUNK_HEC_HOST=prd-p-cfxdt.splunkcloud.com
+export SPLUNK_COM_PROTOCOL=http
+export SPLUNK_HEC_HOST=splunk.example.com
 export SPLUNK_HEC_PORT=8088
-export SPLUNK_HEC_TOKEN=3a2d443c-a092-4628-89d5-64f28c254a0d
-export SPLUNK_METRICS_HEC_TOKEN=16c50410-7c4f-4e9b-acab-e917836366ed
-export SPLUNK_INSECURE_SSL=true
-export SPLUNK_VERIFY_SSL=false
+export SPLUNK_HEC_TOKEN=SPLUNK_HEC_TOKEN
+export SPLUNK_METRICS_HEC_TOKEN=SPLUNK_METRICS_HEC_TOKEN
+export SPLUNK_INSECURE_SSL=false
+export SPLUNK_VERIFY_SSL=true
 export SPLUNK_COMPRESS_DATA=true
-export JPD_URL=http://artifactory-artifactory-nginx:80
+export JPD_URL=http://abc.jfrog.io
 export JPD_ADMIN_USERNAME=admin
-export JFROG_ADMIN_TOKEN=your_jfrog_admin_token_here
 export COMMON_JPD=false
-export LOG_ENV=deep-staging
-export JOIN_KEY=your-actual-join-key
-export INST_NAMESPACE=jfrog-splunk
-export POSTGRES_PASSWORD=your-actual-postgres-password
+export LOG_ENV=staging
