JOBS-1114 - The metric and log index names are now configurable

--- a/app/jfrog-logs/default/macros.conf
+++ b/app/jfrog-logs/default/macros.conf
@@ -1,7 +1,7 @@
 [default_index]
-definition = index="jfrog_splunk"
+definition = index="$SPLUNK_LOGS_INDEX$"
 iseval = 0
 
 [default_metrics_index]
-definition = "index"="jfrog_splunk_metrics"
+definition = "index"="$SPLUNK_METRICS_INDEX$"
 iseval = 0
