--- a/fluentd-demo.conf
+++ b/fluentd-demo.conf
@@ -185,7 +185,7 @@
   hec_host HEC_HOST
   hec_port HEC_PORT
   hec_token HEC_TOKEN
-  index jfrog_splunk
+  index "#{ENV['SPLUNK_LOGS_INDEX']}"
   format json
   sourcetype_key log_source
   use_fluentd_time false
