JOBS-1114 - The metric and log index names are now configurable

--- a/docker-build/docker.env
+++ b/docker-build/docker.env
@@ -4,6 +4,8 @@ SPLUNK_HEC_HOST=splunk.change_me.com
 SPLUNK_HEC_PORT=8088
 SPLUNK_HEC_TOKEN=change_me
 SPLUNK_METRICS_HEC_TOKEN=change_me
+SPLUNK_LOGS_INDEX=jfrog_splunk
+SPLUNK_METRICS_INDEX=jfrog_splunk_metrics
 SPLUNK_INSECURE_SSL=change_me
 SPLUNK_VERIFY_SSL=change_me
 SPLUNK_COMPRESS_DATA=change_me
