--- a/app/jfrog-logs/default/macros.conf
+++ b/app/jfrog-logs/default/macros.conf
@@ -1,7 +1,7 @@
 [default_index]
-definition = index="$SPLUNK_LOGS_INDEX$"
+definition = index="jfrog_splunk"
 iseval = 0
 
 [default_metrics_index]
-definition = "index"="$SPLUNK_METRICS_INDEX$"
+definition = "index"="jfrog_splunk_metrics"
 iseval = 0
